# soap-calc

./: .gitignore  404.html  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  index.html  inventory.md  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  validate_schemas.py
.agent/skills/inventory/: SKILL.md
.agent/skills/soap-formulation/: SKILL.md
.claude-plugin/: plugin.json
.github/workflows/: deploy-docs.yml  publish.yml
data/: additives.json
docs/: index.md
docs/explanation/: chemistry.md  properties.md
docs/guides/: cli.md  formulation.md  inventory.md
docs/reference/: calculations.md  cli.md  core.md  ingredients.md  io.md  utils.md
docs/skills/: formulation.md  index.md  inventory.md
docs/tutorial/: index.md
examples/: beginner_3oil.json  custom_hp_recipe.md  mike_hp_recipe.json  mike_hp_recipe.md  verify_safety_manual.py
explanation/chemistry/: index.html
explanation/properties/: index.html
guides/cli/: index.html
guides/formulation/: index.html
guides/inventory/: index.html
reference/calculations/: index.html
reference/cli/: index.html
reference/core/: index.html
reference/ingredients/: index.html
reference/io/: index.html
reference/utils/: index.html
schemas/: additives.schema.json  oils.schema.json  recipe.schema.json  recipe_result.schema.json
scripts/: generate_schemas.py  validate_schemas.py
search/: search_index.json
skills/: index.html
skills/formulation/: index.html
skills/inventory/: SKILL.md  index.html
skills/inventory/assets/: inventory.template.md
skills/soap-formulation/: SKILL.md
skills/soap-formulation/references/: api-guide.md  soap-formulation-expert-reference.md  superfat-guide.md
soap_calc/: __init__.py  additives.py  calculator.py  cli.py  export.py  fragrance.py  models.py  mold.py  oils.py  properties.py  recipe_io.py  skin_feel.py  units.py  validation.py
stylesheets/: extra.css
tests/: conftest.py  test_calculator.py  test_cli.py  test_modules.py  test_safety.py  test_skin_feel.py  test_units.py
tutorial/: index.html
