[project]
name = "soap_calc"
version = "0.2.3"
description = "The first Python-based soap formulation library. Professional saponification calculations, recipe management, and property analysis."
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Michael Deeb", email = "michael.f.deeb@gmail.com"},
]
keywords = [
    "soap",
    "saponification",
    "lye-calculator",
    "soap-making",
    "formulation",
    "cosmetics",
    "naoh",
    "koh",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Home Automation",
    "Typing :: Typed",
]
dependencies = [
    "pyyaml>=6.0",
    "pydantic>=2.0",
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest",
    "jsonschema",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/mikewolfd/soap-calc"
Documentation = "https://mikewolfd.github.io/soap-calc/"
Repository = "https://github.com/mikewolfd/soap-calc"
Issues = "https://github.com/mikewolfd/soap-calc/issues"
Changelog = "https://github.com/mikewolfd/soap-calc/releases"
PyPI = "https://pypi.org/project/soap-calc/"

[build-system]
requires = ["setuptools>=61.0", "pydantic>=2.0", "pyyaml>=6.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["soap_calc*"]

[tool.setuptools.package-data]
soap_calc = ["../data/*.json"]

[project.scripts]
soap-calc = "soap_calc.cli:main"
